[package]
name = "pea"
version = "0.0.1"
edition = "2021"
authors = [ "Jorge Harrisonn <j.h.m.t.v.10@gmail.com>" ]
description = "Page 'em All, a CLI tool to page the output of your commands"
license-file = "LICENSE"
rust-version = "1.79.0"

[dependencies]
anyhow = "1.0.86"
dirs = "5.0.1"
serde = { version = "1.0.208", features = ["derive"] }
thiserror = "1.0.63"
toml = "0.8.19"
